bk_ida/gobmkida/c1/do_owl_attack
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_owl_attack/src/engine/owl.c:1636:10: error: conflicting types for 'do_owl_attack'
__int64  do_owl_attack( 
         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_owl_attack/src/engine/owl.c:135:12: note: previous declaration is here
static int do_owl_attack(int str, int *move, int *wormid,
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_owl_attack/src/engine/owl.c:1746:10: error: use of undeclared identifier 'eyevalue'
v100 = ( eyevalue)-1; 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_owl_attack/src/obj/1/owl.o] Error 1
